--- a/login-app/index.html
+++ b/login-app/index.html
@@ -18,6 +18,8 @@
 }:root{--vz-vertical-menu-bg:#fff;--vz-vertical-menu-border:#fff;--vz-vertical-menu-item-color:#6d7080;--vz-vertical-menu-item-bg:rgba(102, 145, 231, 0.15);--vz-vertical-menu-item-hover-color:#6691e7;--vz-vertical-menu-item-active-color:#6691e7;--vz-vertical-menu-item-active-bg:rgba(102, 145, 231, 0.15);--vz-vertical-menu-sub-item-color:#7c7f90;--vz-vertical-menu-sub-item-hover-color:#6691e7;--vz-vertical-menu-sub-item-active-color:#6691e7;--vz-vertical-menu-title-color:#919da9;--vz-vertical-menu-box-shadow:0 2px 4px rgba(15, 34, 58, 0.12);--vz-vertical-menu-dropdown-box-shadow:0 2px 4px rgba(15, 34, 58, 0.12)
 }html{position:relative;min-height:100%}@-webkit-keyframes spin{to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-webkit-keyframes DropDownSlide{100%{margin-top:-1px}0%{margin-top:8px}}@-webkit-keyframes DropDownSlideDown{100%{margin-bottom:0}0%{margin-bottom:8px}}@-webkit-keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-30%,0,0);transform:translate3d(-30%,0,0)}to{opacity:1;-webkit-transform:translateZ(0);transform:translateZ(0)}}@-webkit-keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(0,30%,0);transform:translate3d(0,30%,0)}to{opacity:1;-webkit-transform:translateZ(0);transform:translateZ(0)}}@-webkit-keyframes zoomIn{0%{opacity:0;-webkit-transform:scale3d(.3,.3,.3);transform:scale3d(.3,.3,.3)}50%{opacity:1}}@-webkit-keyframes animate-positive{0%{width:0}}@-webkit-keyframes opaque{0%{opacity:0}to{opacity:1}}@-webkit-keyframes resizeanim{0%,to{opacity:0}}@-webkit-keyframes fpFadeInDown{from{opacity:0;-webkit-transform:translate3d(0,-20px,0);transform:translate3d(0,-20px,0)}to{opacity:1;-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}}@-webkit-keyframes errorAnimation{0%{-webkit-transform:translateX(0);transform:translateX(0)}15%{-webkit-transform:translateX(-25%) rotate(-5deg);transform:translateX(-25%) rotate(-5deg)}30%{-webkit-transform:translateX(20%) rotate(3deg);transform:translateX(20%) rotate(3deg)}45%{-webkit-transform:translateX(-15%) rotate(-3deg);transform:translateX(-15%) rotate(-3deg)}60%{-webkit-transform:translateX(10%) rotate(2deg);transform:translateX(10%) rotate(2deg)}75%{-webkit-transform:translateX(-5%) rotate(-1deg);transform:translateX(-5%) rotate(-1deg)}100%{-webkit-transform:translateX(0);transform:translateX(0)}}@-webkit-keyframes mover{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-16px);transform:translateY(-16px)}}@-webkit-keyframes voice-wave{0%{opacity:1;-webkit-transform:scale(0);transform:scale(0)}100%{opacity:0;-webkit-transform:scale(1);transform:scale(1)}}</style><link href="./assets/css/app.min.css" rel="stylesheet" type="text/css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="./assets/css/app.min.css"></noscript>
   <link href="./assets/css/custom.min.css" rel="stylesheet" type="text/css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="./assets/css/custom.min.css"></noscript>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
@@ -33,7 +35,7 @@
 <script src="./assets/libs/node-waves/waves.min.js"></script>
 <script src="./assets/libs/feather-icons/feather.min.js"></script>
 <script src="./assets/js/pages/plugins/lord-icon-2.1.0.js"></script>
-
+<script src="./assets/js/plugins.js"></script>
 <script src="./assets/libs/apexcharts/apexcharts.min.js"></script>
 <script src="./assets/libs/jsvectormap/js/jsvectormap.min.js"></script>
 <script src="./assets/libs/jsvectormap/maps/world-merc.js"></script>
@@ -45,6 +47,6 @@
 
 
 
-<script src="runtime.8e20e553accaea55.js" type="module"></script><script src="polyfills.a68fc7189e0f1263.js" type="module"></script><script src="main.8625ca8e44972f88.js" type="module"></script>
+<script src="runtime.c27a26efea9bcb1b.js" type="module"></script><script src="polyfills.a68fc7189e0f1263.js" type="module"></script><script src="main.116b84ecd0003d51.js" type="module"></script>
 
 </body></html>
